# windows_whisper

./: README.md  pyproject.toml  requirements.txt
src/dictate/: __init__.py  __main__.py  app.py
src/dictate/api/: __init__.py  client.py  process.py  transcribe.py
src/dictate/audio/: __init__.py  capture.py
src/dictate/config/: __init__.py  settings.py
src/dictate/input/: __init__.py  caret.py  hotkeys.py  text_inject.py
src/dictate/ui/: __init__.py  mode_bar.py  overlay.py  preview_card.py  tray.py
