[project]
name = "dictate-for-windows"
version = "0.1.0"
description = "A sleek, AI-powered dictation overlay for Windows - The Cursor Companion"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Emil"}
]
keywords = ["dictation", "speech-to-text", "whisper", "windows", "overlay"]

dependencies = [
    "PySide6>=6.6.0",
    "openai>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "pynput>=1.7.6",
    "pyperclip>=1.8.0",
    "pywin32>=306",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[project.scripts]
dictate = "dictate.__main__:main"

[project.gui-scripts]
dictate-gui = "dictate.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dictate"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
